# fake-computer-dices

./: Cargo.toml  README.md
src/: dice.rs  dice_arg.rs  dice_types.rs  main.rs  multiroll.rs  other_commands.rs  parsing.rs
src/result_print/: mod.rs  simple.rs  table.rs
